# multisend

./: Cargo.toml  LICENSE  README.md
src/: chains.rs  lib.rs  main.rs  utils.rs
src/chains/: solana.rs  terra.rs
tests/: common.rs  integration_tests.rs
