[package]
authors = ["Omkar Bhat"]
name = "multisend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.130"
serde_json = "1.0.68"
solana-clap-utils = "=1.8.1"
solana-client = "=1.8.1"
solana-program = "=1.8.1"
solana-sdk = "=1.8.1"
thiserror = "1"
terra-rust-api = "1.1.8"
rpassword = "0.0.4"
base64 = "0.13.0"
futures = "0.3.19"
tokio = { version = "1.15.0", features = ["full"] }
secp256k1 = { version = "0.20.3", default-features = false }